# online-cinema

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-prod.yml  docker-compose-tests.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
commands/: deploy.sh  entrypoint.sh
config_envs/: .env.prod.sample  .env.sample  .env.test.sample
docker/prod/: Dockerfile
docker/test/: Dockerfile
src/: main.py  pytest.ini
src/config/: __init__.py  api.py  celery.py  config.py  database.py  dependencies.py  email.py  payment.py  security.py  settings.py
src/database/: __init__.py  config.py  session.py  session_postgres.py  startup_data.py
src/database/migrations/: env.py
src/database/migrations/versions/: 069b6514057e_init_models.py  0c4f54354f69_init_payments_models.py  34fd63966446_init_order_models.py  47d6f267234e_initial_tables.py  5cecaaea1a85_add_account_models.py  829110659a81_init_order_models.py  a1b67ffb1410_update_updated_at_field_at_usermodel.py  a9cad7633c45_init_cart_models.py  b54930467e86_initial.py  c8b5250556b0_init.py  ddc6f669f64b_init_purchase_model.py
src/database/models/: __init__.py  accounts.py  base.py  carts.py  enums.py  movies.py  orders.py  payments.py  purchases.py
src/dependencies/: __init__.py  auth.py  config.py  group.py
src/routes/: __init__.py  accounts.py  administration.py  carts.py  docs.py  movies.py  orders.py  payments.py  profiles.py
src/routes/movies/: __init__.py  genres.py  movie_utils.py  movies.py  stars.py
src/schemas/: __init__.py  _mixins.py  accounts.py  administration.py  carts.py  common.py  examples.py  movies.py  orders.py  payments.py  profiles.py
src/security/: __init__.py  dependencies.py  interfaces.py  token_manager.py
src/services/: __init__.py  email_interface.py  email_service.py  stripe.py  stripe_interface.py
src/services/templates/emails/: activation.html  activation_confirmation.html  base.html  password_reset_completion.html  password_reset_request.html  payment_success.html
src/tasks_manager/: celery_app.py  temp.py
src/tasks_manager/tasks/: cleanup.py
src/tests/: conftest.py
src/tests/api/: test_accounts.py  test_administration.py  test_administrtion.py  test_carts.py  test_dependencies.py  test_docs.py  test_genres.py  test_movies.py  test_orders.py  test_pagination.py  test_payments.py  test_profiles.py  test_stars.py
src/tests/examples/: movie_examples.py  profile_examples.py
src/tests/services/: test_email_service.py  test_stripe_service.py
src/tests/stubs/: __init__.py  email.py
src/tests/tasks/: test_cleanup.py
src/tests/utils/: __init__.py  factories.py  fixtures.py  utils.py
src/tests/utils/fixtures/: __init__.py  carts.py  clients.py  movies.py  orders.py  payments.py
src/utils/: __init__.py  openapi.py  pagination.py  responses.py
src/validation/: __init__.py  profile_validators.py  security_validators.py
