[project]
name = "online-cinema"
version = "0.1.0"
description = "Online cinema poetry configuration file"
authors = [
    {name = "Maksym Bondarevskyi",email = "bondarevskiymaks@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.38"
uvicorn = "^0.34.0"
flake8 = "^7.1.1"
black = "^25.1.0"
alembic = "^1.14.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
