[project]
name = "online-cinema"
version = "0.1.0"
description = "Online cinema poetry configuration file"
authors = [
    {name = "Maksym Bondarevskyi",email = "bondarevskiymaks@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
sqlalchemy = "^2.0.38"
uvicorn = "^0.34.0"
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
psycopg = "^3.2.4"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.11.5"}
pyjwt = "^2.10.1"
jinja2 = "^3.1.6"
celery = "^5.5.3"
redis = "^6.2.0"
python-multipart = "^0.0.20"
pillow = "^11.2.1"
stripe = "^12.2.0"
gunicorn = "^23.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
pytest-cov = "^6.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-pyproject = "^1.2.3"
black = { extras = ["d"], version = "^25.1.0" }
mypy = "^1.17.1"
types-passlib = "^1.7.7.20250602"
types-redis = "^4.6.0.20241004"
celery-types = "^0.23.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = "src/tests"
addopts = """
    --tb=short
    --strict-markers
    --cov=src
    --cov-report=term-missing
    --color=yes
    --maxfail=1
"""
filterwarnings = [
    "ignore::DeprecationWarning"
]


[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
exclude = [
    "src/database/migrations/.*",
    "src/tests/.*",
]
[[tool.mypy.overrides]]
module = ["fastapi.params"]
follow_imports = "skip"

[tool.alembic]
script_location = "src/database/migrations/"
prepend_sys_path = ". src"
version_path_separator = "os"
sqlalchemy.url = "driver://user:pass@localhost/dbname"


[tool.flake8]
inline-quotes = '"'
ignore = [
    "E203", "E266", "W503", "ANN002", "ANN003",
    "ANN101", "ANN102", "ANN401", "N807", "N818",
    "VNE001", "F401", "W504"
]
max-line-length = 119
max-complexity = 18
select = [
    "B", "C", "E", "F", "W", "T4", "B9",
    "ANN", "Q0", "N8", "VNE"
]
exclude = [".venv"]
extend-exclude = [
    "src/tests/*",
    "src/database/migrations/*"
]